--- a/index.html
+++ b/index.html
@@ -12,24 +12,33 @@
     <nav>
      <ul>
         <li>
-          <a href="#">Github</a>
+          <a href="https://github.com/jonathanlevi14"target="_blank" >Code with the Squad</a>
         </li>
         <li>
-          <a href="#">Portfolio</a>
+          <a href="#contact-me">Join the Squad</a>
         </li>
         <li>
-          <a href="#">Contact</a>
+          <a href="mailto:jonathan@example.com">Contact The Squad</a>
         </li>
      </ul>
     </nav>
   </header>
   <main>
-    <h1 class="text-center">Our New Website</h1>
-    <img id="main-image" src="https://i.redd.it/2c7l5a3quoy51.jpg" alt="Deadpool vs Wolverine Comic fight">
-    <p class="text-center">We are the Super-Squad and we are here to mess things up! Deadpool doesn't have anything on us. </p>
+
+    <figure>
+      <h1 class="text-center">Super-Squad 5</h1>
+      <img id="main-image" src="https://i.redd.it/2c7l5a3quoy51.jpg" alt="Deadpool vs Wolverine Comic fight">
+    <div>
+      <p class="text-center">We are the Super-Squad and we are here to mess things up! Deadpool doesn't have anything on us. </p>
+    </div>
+    </figure>
+      
+    <div class= versus></divclass></div>
+    
+
     <section class="text-center">
-      <h2>Contact Me</h2>
-      <form>
+      <h2>Enter Your Info To Get Info About The Squad</h2>
+      <form id="contact-me">
         <label for="fname">Name:</label>
         <input type="text" id="fname" name="fname"><br>
         <label for="Email">Email:</label>
